--- a/public/index.html
+++ b/public/index.html
@@ -31,29 +31,6 @@
     <!-- need a user gesture to allow sound on some browsers i.e. iOS -->
     <link rel="stylesheet" href="css/user-gesture.css">
 
-    <script>
-        AFRAME.registerComponent('start-experience', {
-            init: function () {
-                //we can't play sound on some browsers until we have some user interaction
-                //this means we should only start playing ambient music after this button is clicked
-                console.log('scene loaded');
-                document.querySelector('#loading-animation').style.display = 'none';
-                document.querySelector('#user-gesture-button').style.display = 'block';
-            }
-        });
-
-        //function called from user-gesture click
-        function startExperience() {
-            //hide user-gesture overlay
-            document.querySelector('#user-gesture-overlay').style.display = 'none';
-
-            //start all ambient music
-            document.getElementById("city_sounds").components.sound.playSound();
-            document.getElementById("scene_music").components.sound.playSound();
-
-        }
-    </script>
-
 </head>
 
 
@@ -67,10 +44,7 @@
             <div id = "welcome-text-3"> <br></div>
             <div id = "welcome-text-4"><br> </div>
             <br>
-            <button id="user-gesture-button" onclick="startExperience()">Enter Experience</button>
-            <!-- loading gif from: https://www.behance.net/gallery/31234507/Open-source-Loading-GIF-Icons-Vol-1 -->
-            <img id="loading-animation"
-                src="https://cdn.glitch.com/4d85200f-900f-4f4a-b950-82c4af80c1fb%2Floader.gif?v=1611262527887">
+            <button id="user-gesture-button" class = 'fade-in' onclick="startExperience()">Next</button>
         </div>
     </div>
 
