--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             <a-entity cursor="rayOrigin:mouse;" raycaster="far:40; interval:200; objects:.interactive;"></a-entity>
 
             <!--text element for UI-->
-            <a-entity  id = "puzzle-text" position = "1.2 0.7 -1" text = "value: Puzzles: 0/5; width:2; font:https://cdn.aframe.io/fonts/Aileron-Semibold.fnt;"></a-entity>
+            <a-entity  id = "puzzle-text" position = "1.2 0.7 -1" text = "value: Puzzles: 0/4; width:2; font:https://cdn.aframe.io/fonts/Aileron-Semibold.fnt;"></a-entity>
 
             <a-entity id="good-sound-fx" sound="src:#good2_sfx; autoplay:false;"></a-entity>
             <!--Blank sound FX holder to follow the player around when they succeed or fail at things-->
@@ -529,7 +529,7 @@
             <a-entity id="placement3" position="-27 20 18" geometry="primitive:cylinder; radius:0.3; height:0.5;"
             material="color:black"></a-entity>
 
-            <!--Environmental effect testing button-->
+            <!--Environmental effect testing button
             <a-entity id="environment_button" position="5 10.2 10">
                 <a-entity class="button interactive" plant-effect position="0 0.6 0"
                     geometry="primitive:cylinder; radius: 0.15; height: 0.2;" material="color:rgb(255, 100, 100)"
@@ -539,7 +539,7 @@
                 </a-entity>
                 <a-entity position="0 0.3 0" geometry="primitive:box; width:0.5; depth:0.5; height: 0.6;"
                     material="color:white;"></a-entity>
-            </a-entity>
+            </a-entity>-->
 
             <!--
                     DOORS
